# prj-zh-python-docker

./: Makefile  README.md  pyproject.toml
logging/: config.json
src/app/: config.py  database.py  logging.py  main.py  models.py  utils.py
src/app/routers/: addresses.py  common.py  customers.py
src/app/schemas/: address.py  customer.py
src/migrations/: alembic.ini
src/migrations/alembic/: env.py
src/migrations/alembic/versions/: 687a4fe02fa7_.py  6e9fd52f3cbc_.py
src/tests/: conftest.py  utils.py
src/tests/unit/: test_main.py  test_utils.py
